# shop-backend

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  EXAMPLE_QUERIES.md  README.md  README_RESEARCH_UI.md  amazon_product_data.json  amazon_scraper.py  google_shopping.py  mypy.ini  parse_product.py  pyproject.toml  requirements.txt  test_amazon_scraper.py  util.py
.cursor/: lesson.md
.cursor/rules/: agent-instruction.mdc  fastapi-best-practices.mdc  openai-agents.mdc  pydantic-best-practices.mdc  python-style.mdc
app/: config.py  logfire_init.py  main.py  streamlit_research_ui.py
app/agents/: constants.py  product_research_agent_v1.py  review_extraction.py  review_extraction_v2.py  summarizer.py
app/llm/: constants.py  model_factory.py
app/llm/agents/: planner_agent.py  product_research_agent.py  product_research_agent_v1.py  research_manager.py  search_agent.py  search_summary_agent.py  write_agent.py
app/llm/evals/: __init__.py  review_evaluator.py
app/llm/func/: review_extractor.py  review_merger.py  summarizer.py
app/product/: parser.py  service.py
app/reviews/: model.py
app/scraper/: cache.py  models.py  router.py  service.py  utils.py
app/scraper/bright_data/: amazon.py  google_search.py  management_api.py
app/scraper/crawler/: fetch_utils.py  html_fetcher.py
app/scraper/oxylabs/amazon/: models.py  product_scraper.py  test_models.py  utils.py
app/scraper/oxylabs/google/: models.py  search.py
app/scraper/oxylabs/google_shopping/: api.py
app/scraper/oxylabs/universal/: models.py  scraper.py
app/scraper/oxylabs/walmart/: html_parser.py  models.py  product_scraper.py  utils.py
app/scraper/reddit/: json_parser.py
app/scraper/searchapi/: google_search.py  google_shopping.py
app/scraper/youtube/: transcript.py
app/tests/data/amazon/: product_response_1.json  product_response_2.json  product_response_3.json  product_response_4.json  product_response_5.json  product_response_6.json  product_response_7.json
app/tests/data/walmart/: product_response.json  product_response_1.json  product_response_2.json  product_response_3.json  product_response_4.json  product_response_5.json  product_response_6.json  product_response_7.json  product_response_8.json
app/tests/product/: test_parser.py
app/tests/scraper/: test_service.py  test_utils.py
app/tests/scraper/reddit/: test_json_parser.py
app/tests/tools/google_shopping/: test_models.py
app/tests/tools/parser/: test_product_metadata_parser.py
app/utils/: count_token.py  counter.py  url_utils.py
data_process/amazon_review/: load.py  store.py
notebooks/: amazon_review.ipynb  amazon_review_analysis.py
product_research/: service.py
research_reports/: report_20250320_144639_murad_retinol_youth_renewal_se.md  report_20250320_145924_murad_retinol_youth_renewal_se.md  report_20250320_152521_murad_retinol_youth_renewal_se.md  report_20250320_165735_murad_retinol_youth_renewal_se.md  report_20250320_185613_Murad_Retinol_Youth_Renewal_Se.md  report_20250320_211942_murad_retinol_youth_renewal_se.md  report_20250320_213349_murad_retinol_youth_renewal_se.md  report_20250320_214118_murad_retinol_youth_renewal_se.md  report_Aquasana_Claryum®_3-Stage_Max_.txt  report_CRZ_YOGA_Butterluxe_Racerback_.txt  report_Cooper_Discoverer_All-Terrain_.txt  report_Google_Nest_Learning_Smart_Wif.txt  report_Honest_Baby_Wipes.txt  report_Millie_Moon_Diapers.txt  report_Murad_Retinol_Youth_Renewal.txt  report_Murad_Retinol_Youth_Renewal_Se.txt  report_Samsonite_Freeform_21-Inch_Har.txt  report_Sports_Research_Omega-3_Fish_O.txt
src/: app.py  config.py  logfire_init.py  main.py
src/agents/: product_research_agent.py
src/product/: README.md  model.py  parser.py  service.py
src/scraper/: models.py  router.py  service.py
src/scraper/archived_parser/: product_metadata_parser.py
src/scraper/bright_data/: amazon.py  google_search.py  management_api.py
src/scraper/crawler/: html_fetcher.py
src/scraper/oxylabs/amazon/: models.py  product_scraper.py
src/scraper/oxylabs/google/: search.py
src/scraper/parser/: product_metadata_parser.py  product_parser.py
src/scraper/searchapi/: google_search.py  google_shopping.py
src/scraper/youtube/: transcript.py
src/tests/scraper/: test_utils.py
src/tools/google/: search.py
src/tools/google_shopping/: api.py
src/tools/parser/: product_metadata_parser.py  product_parser.py
tests/google_shopping/: test_models.py
tests/google_shopping/fixtures/: product_specs.json  shopping_response.json
tests/product/: test_parser.py
tests/product/data/: amazon_product.json
tools/: README.md  llm_api.py  research_cli.py  web_scraper.py
tools/amazon/: models.py  product_scraper.py
tools/crawler/: html.py
tools/google/: search.py
tools/google_shopping/: api.py  models.py
tools/google_shopping/tests/: test_models.py
tools/parser/: parse_product.py  product_metadata_parser.py  product_parser.py
tools/parser/models/: product_metadata.py
tools/walmart/: models.py
(+5 files in other folders)
