[tool.poetry]
name = "shop-backend"
version = "0.1.0"
description = ""
authors = ["Jun Liu <antyser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agentql = "^1.6.2"
dotenv = "^0.0.5"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
types-requests = "^2.32.0.20241016"

[tool.black]
line-length = 150
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 150
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = []

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
disable_error_code = ["import-untyped"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
