[tool.pdm.dev-dependencies]
dev = [
    "black<25.0.0,>=24.2.0",
    "ruff<1.0.0,>=0.3.0",
    "mypy<2.0.0,>=1.8.0",
    "pre-commit<4.0.0,>=3.6.0",
    "types-requests<3.0.0.0,>=2.32.0.20241016",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Jun Liu", email = "antyser@gmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "agentql<2.0.0,>=1.6.2",
    "beautifulsoup4>=4.12.3",
    "fake-headers>=1.0.2",
    "httpx[http2]>=0.28.1",
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "loguru<1.0.0,>=0.7.3",
    "playwright-dompath>=0.0.1",
    "python-dotenv<2.0.0,>=1.0.1",
    "requests>=2.32.3",
]
name = "shop-backend"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "black<25.0.0,>=24.2.0",
    "ruff<1.0.0,>=0.3.0",
    "mypy<2.0.0,>=1.8.0",
    "pre-commit<4.0.0,>=3.6.0",
    "types-requests<3.0.0.0,>=2.32.0.20241016",
]

[tool.black]
line-length = 150
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 150
target-version = "py312"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = []

# Exclude files in tests/ directory from ruff checking
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "tests/**",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
disable_error_code = ["import-untyped"]
